--- a/advent-2025/advent-2025.csproj
+++ b/advent-2025/advent-2025.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>advent_2025</RootNamespace>
+    <RootNamespace>AdventOfCode</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
